--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -5,11 +5,6 @@ on: [push]
 jobs:
   register-content:
     runs-on: ubuntu-latest
-    env:
-      CROSSREF_DEPOSITOR_NAME: ${{ secrets.CROSSREF_DEPOSITOR_NAME }}
-      CROSSREF_DEPOSITOR_EMAIL: ${{ secrets.CROSSREF_DEPOSITOR_EMAIL }}
-      CROSSREF_REGISTRANT: ${{ secrets.CROSSREF_REGISTRANT }}
-      
     name: Register content
     steps:
       - name: Checkout
@@ -21,5 +16,10 @@ jobs:
         # uses: shipyard/github-action/fetch-shipyard-env@1.0.0
         with:
           url: "https://blog.front-matter.io/posts/feedback-for-blog-publishers/"
+          depositor: ${{ secrets.CROSSREF_DEPOSITOR_NAME }}
+          email: ${{ secrets.CROSSREF_DEPOSITOR_EMAIL }}
+          registrant: ${{ secrets.CROSSREF_REGISTRANT }}
+          crossref-username: ${{ secrets.CROSSREF_USERNAME }}
+          crossref-password: ${{ secrets.CROSSREF_PASSWORD }}
       - name: Print the registered DOI
         run: echo "${{ steps.register.outputs.doi }}"
