--- a/action.yaml
+++ b/action.yaml
@@ -47,7 +47,7 @@ runs:
     - name: Generate XML
       run: |
         mkdir -p upload
-        commonmeta ${{ inputs.url }} --depositor=${{ inputs.depositor }} --email=${{ inputs.email }} --registrant=${{ inputs.registrant }} -t crossref_xml > upload/temp
+        bundle exec commonmeta ${{ inputs.url }} --depositor=${{ inputs.depositor }} --email=${{ inputs.email }} --registrant=${{ inputs.registrant }} -t crossref_xml > upload/temp
       shell: bash
     - name: Upload
       uses: actions/upload-artifact@v2
