--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -21,5 +21,5 @@ jobs:
           registrant: ${{ secrets.CROSSREF_REGISTRANT }}
           crossref-username: ${{ secrets.CROSSREF_USERNAME_WITH_ROLE }}
           crossref-password: ${{ secrets.CROSSREF_PASSWORD }}
-      - name: Print the registered DOI
-        run: echo "${{ steps.register.outputs.doi }}"
+      - name: Print the status code for registering content 
+        run: echo "${{ steps.register.outputs.* }}"
