--- a/action.yaml
+++ b/action.yaml
@@ -47,7 +47,7 @@ runs:
     - name: Generate XML
       run: |
         mkdir -p upload
-        bundle exec commonmeta ${{ inputs.url }} --depositor="${{ inputs.depositor }}" --email="${{ inputs.email }}" --registrant="${{ inputs.registrant }}" -t crossref_xml > upload/temp
+        bundle exec commonmeta ${{ inputs.url }} --depositor "${{ inputs.depositor }}" --email "${{ inputs.email }}" --registrant "${{ inputs.registrant }}" -t crossref_xml > upload/temp
       shell: bash
     - name: Upload
       uses: actions/upload-artifact@v2
@@ -62,4 +62,4 @@ runs:
       uses: wei/curl@v1
       id: register
       with:
-        args: -X POST -F "operation=doMDUpload" -F "login_id=${{ inputs.crossref-username }}" -F "login_passwd=${{ inputs.crossref-password }}" -F "fname=@upload/temp https://doi.crossref.org/servlet/deposit
+        args: -X POST -F "operation=doMDUpload" -F "login_id=${{ inputs.crossref-username }}" -F "login_passwd=${{ inputs.crossref-password }}" -F "fname=@upload/temp https://doi.crossref.org/servlet/deposit -s -o /dev/null -w "%{http_code}"
