--- a/action.yaml
+++ b/action.yaml
@@ -62,4 +62,4 @@ runs:
       uses: wei/curl@v1
       id: register
       with:
-        args: -X POST -F "operation=doMDUpload" -F "login_id=${{ inputs.crossref-username }}" -F "login_passwd=${{ inputs.crossref-password }}" -F "fname=@upload/temp.xml https://doi.crossref.org/servlet/deposit -s -o /dev/null -w "%{http_code}" >> $GITHUB_OUTPUT
+        args: -X POST -F "operation=doMDUpload" -F "login_id=${{ inputs.crossref-username }}" -F "login_passwd=${{ inputs.crossref-password }}" -F "fname=@upload/temp.xml https://doi.crossref.org/servlet/deposit -s -o /dev/null -w "%{http_code}" >> "$GITHUB_OUTPUT"
