--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -11,9 +11,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Register content
         id: register
-        uses: ./ # Uses an action in the root directory
-        # or use a released GitHub Action
-        # uses: front-matter/github-action/content-registration@1.0.0
+        uses: front-matter/content-registration@v0.9.0
         with:
           url: "https://blog.front-matter.io/posts/feedback-for-blog-publishers/"
           depositor: ${{ secrets.CROSSREF_DEPOSITOR_NAME }}
